# llvm-tutorial

./: CMakeLists.txt  README.md
docs/: myriscv-roadmap.md  testing-playbook.md
plans/: week1.md
scripts/: run_codegen_smoke.sh
smoke/: add.ll  call.ll  fib.ll  global.ll  local.ll  min.ll  ret42.ll  sum_loop.ll
test/CodeGen/MyRISCV/: add.ll
test/Execution/MyRISCV/: add.c
test/MC/MyRISCV/: add.s
